[tool.poetry]
name = "space-battle"
version = "0.1.0"
description = "Space Battle Game"
authors = ["Konstantin Savin"]
readme = "README.md"
packages = [{include = "space_battle"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
